# Steel.dev-Langchain

./: .env  .gitignore  README.md  Users:reza:Projects:steel-l.textClipping  check_env.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_loader.py  web_loader.py
agents/: README.md  auth_handler.py  data_extraction.py  ecommerce_agent.py  form_automation.py  shopping_agent.py  steel_agent.py  web_agent.py
agents/tools/: web_tools.py
doc/: steel-api.json
examples/: demo.html  visual_demo.py  web_agent.py
notebooks/: steel_langchain_example.ipynb
project-docs/: 1-project-overview.md  2-implementation.md  steel-rest-api-reference.json
scripts/: test_aliases.sh
src/steel_langchain/: README.md  __init__.py  cleanup_sessions.py  web_loader.py
tests/: README.md  test_loader.py
